Solved that arrows in index/thumbnail-panel appeared at wrong place on IE11

--- a/dev/scss/components/_thumbnailPanel.scss
+++ b/dev/scss/components/_thumbnailPanel.scss
@@ -25,7 +25,7 @@
 
   &_left,
   &_right {
-    position: fixed;
+    position: absolute;
     height: 32px;
     width: 32px;
     background-color: rgba($color-base, 0.8);
